# screen_divider

./: .gitignore  README.md  design.py  gui.py  main.py  pyproject.toml
